--- a/index.html
+++ b/index.html
@@ -6,6 +6,84 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>メルカリ報價計算器（第一階段報價）</title>
   <style>
+body { font-family: 'Helvetica Neue', sans-serif; background-color: #f9f9f9; color: #333; padding: 1.5em; }
+h1, h2 { color: #333; }
+button {
+  background-color: #fdd089;
+  border: none;
+  color: white;
+  padding: 0.75em 1.4em;
+  font-size: 1.05em;
+  border-radius: 6px;
+  margin: 0.6em 0;
+  cursor: pointer;
+  transition: background-color 0.25s ease, transform 0.1s ease;
+}
+button:active {
+  transform: scale(0.98);
+}
+  background-color: #fdd089;
+  border: none;
+  color: white;
+  padding: 0.6em 1.2em;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 1em;
+  border-radius: 5px;
+  margin: 0.4em 0.2em;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+button:hover {
+  background-color: #fbc663;
+  background-color: #0056b3;
+}
+table {
+  width: 100%;
+  border-collapse: collapse;
+  font-size: 0.85em;
+  background: white;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+}
+th {
+  background-color: #f0f0f0;
+  padding: 0.75em;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+td {
+  padding: 0.75em;
+  border-bottom: 1px solid #eee;
+  word-break: break-word;
+}
+.section {
+  background-color: white;
+  padding: 1.2em;
+  margin-bottom: 2em;
+  border-radius: 8px;
+  box-shadow: 0 1px 4px rgba(0,0,0,0.05);
+}
+@media (max-width: 768px) {
+  table, th, td { font-size: 0.8em; }
+  button {
+  background-color: #fdd089;
+  border: none;
+  color: white;
+  padding: 0.75em 1.4em;
+  font-size: 1.05em;
+  border-radius: 6px;
+  margin: 0.6em 0;
+  cursor: pointer;
+  transition: background-color 0.25s ease, transform 0.1s ease;
+}
+button:active {
+  transform: scale(0.98);
+} width: 100%; margin-top: 0.5em; }
+}
+
 @media (max-width: 768px) {
   body { padding: 1em; font-size: 1em; line-height: 1.6; background: #fffdf8; }
   h1 { font-size: 1.4em; }
@@ -40,6 +118,19 @@
       margin-bottom: 1em;
     }
     button {
+  background-color: #fdd089;
+  border: none;
+  color: white;
+  padding: 0.75em 1.4em;
+  font-size: 1.05em;
+  border-radius: 6px;
+  margin: 0.6em 0;
+  cursor: pointer;
+  transition: background-color 0.25s ease, transform 0.1s ease;
+}
+button:active {
+  transform: scale(0.98);
+}
       padding: 0.5em 1em;
       margin: 0.5em 0;
       background: #ffcc99;
@@ -65,7 +156,11 @@
   </style>
 </head>
 <body>
-  <details class="section" style="background:#fff9f0; border:1px solid #e0c8a0; padding:1em; border-radius:8px; margin-bottom:1em;">
+  
+
+<h1 style="font-size: 1.8em;">メルカリ報價計算器<br>（第一階段報價）</h1>
+<p style="font-size: 1em; margin-top: 0.2em;">by <strong>花荻❀代購</strong>｜官方LINE：<a href="https://line.me/R/ti/p/@043zpgti" target="_blank">@043zpgti</a></p>
+<details class="section" style="background:#fff9f0; border:1px solid #e0c8a0; padding:1em; border-radius:8px; margin-bottom:1em;">
   <summary style="font-size:1.1em; font-weight:bold; cursor:pointer;">📖 使用說明（點此展開／收合）</summary>
   <div style="margin-top:1em;">
     <p><strong>📌 本工具用途：</strong> 提供快速報價功能，供委託人計算從「日本 Mercari」購買商品的第一階段報價金額，並可整合多筆報價、一鍵複製報價文字給代購方。</p>
@@ -106,17 +201,15 @@
   </div>
 </details>
 
-<h1 style="font-size: 1.8em;">メルカリ報價計算器<br>（第一階段報價）</h1>
-
   <div class="section">
     <h2>🔗 報價紀錄<br>（貼上網址 + 商品價格）</h2>
     <label for="itemUrl">Mercari 商品網址：</label>
     <input type="text" id="itemUrl" placeholder="https://..." />
     <br><label for="itemPrice">商品價格（日圓）：</label>
     <input type="number" id="itemPrice" placeholder="例如：2500" />
-    <div style="text-align:center;">
-<button onclick="addItem()">新增報價紀錄</button>
-<button onclick="copySummary()" style="margin-left:1em;">複製全部報價文字</button>
+    <div style="text-align:left;">
+<button onclick="addItem()">新增報價紀錄</button><br>
+<button onclick="copySummary()">複製全部報價文字</button>
 </div>
 <p style="color:#a00;font-weight:bold;">請按照日版mercari的商品金額輸入，若填寫錯誤將導致報價錯誤</p>
     <div id="itemTableWrapper">
